# client

./: .env.example  .gitignore  .stylelintrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  i18n.js  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/documents/: CODE_OF_CONDUCT.ko_KR.md  CONTRIBUTING.ko_KR.md  README.ko_KR.md
.github/workflows/: codeql.yml  main.yml  pr_test.yml  release.yml
public/: manifest.json
src/: App.jsx  main.jsx  service-worker.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: layout.js  page.js
src/app/dashboard/: layout.js
src/assets/: 16x-icons.jsx  24x-icons.jsx  32x-icons.jsx  logo.jsx
src/components/common/: Button.js  Button.jsx  Chart.jsx  Dropdown.jsx  IconButton.js  InputField.js  LayerPopup.jsx  Link.js  Loading.jsx  OverviewDataDisplay.jsx  ProfileCreateForm.jsx  ProfileList.jsx  Searchbar.jsx  (+2 more)
src/constants/: routes.js
src/contexts/: states.js
src/hooks/: interval.jsx  pwa.jsx  useI18n.js  useLocalStorage.js  useRouteRedirect.js
src/lib/: languageDetector.js  localstorage.js  redirect.js
src/locales/: index.js
src/pages/: _app.js  index.js  settings.js
src/routes/: BanList.jsx  Connection.jsx  Console.jsx  DashboardLayout.jsx  ErrorPage.jsx  Files.jsx  Overview.jsx  Players.jsx  Root.jsx  Settings.jsx  Stats.jsx  Traffic.jsx  Update.jsx  Worlds.jsx
src/storage/: data.js  profile.js  theme.js
src/styles/: font-settings.css  themes.js
src/utils/: ansi.jsx  convert.js  data.js  modal.js  net.js  numbers.js
(+23 files in other folders)
